// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<Fragment>
  <NewPost
    key="new-post"
    onPostCreated={[Function]}
  />
  , posts.length &gt; 0 ? (
  <PostsList
    key="posts-list"
    onPostDeleted={[Function]}
    posts={Array []}
  />
  ) : null
</Fragment>
`;

exports[`Container renders a default posts page 1`] = `
<Fragment>
  <NewPost
    key="new-post"
    onPostCreated={[Function]}
  />
  , posts.length &gt; 0 ? (
  <PostsList
    key="posts-list"
    onPostDeleted={[Function]}
    posts={
      Array [
        Object {
          "body": "World",
          "title": "Hello",
        },
      ]
    }
  />
  ) : null
</Fragment>
`;
